Fix flex for user info on small screens.

--- a/themes/stepmania/css/style.css
+++ b/themes/stepmania/css/style.css
@@ -489,6 +489,8 @@ footer p {
       max-width: none;
       border: none;
       position: relative;
+      -webkit-flex: 0 0 auto;
+      flex: 0 0 auto;
       height: 42px; }
       .post-body .user-info .avatar {
         float: right;
